siduxcc (0.5.6.11) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 22 Aug 2007 23:25:57 +0200

siduxcc (0.5.6.10) unstable; urgency=low

  * siduxcc_software: clean (apt-get) function added
  * siduxcc_software, siduxcc_hardware, siduxcc_kernel: konsole emulator
    integrated

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 22 Aug 2007 22:36:00 +0200

siduxcc (0.5.6.9) unstable; urgency=low

  * new hardware module added
  * copyright-file updated
  * siduxcc_hardware: de-translation improved  

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 22:04:53 +0200

siduxcc (0.5.6.8) unstable; urgency=low

  * siduxcc_software: new design
  * siduxcc_software: timeout for duWarnings
  * siduxcc_network: ndiswrapper link fixed
  * siduxcc_info: de-translation fixed
  * siduxcc_kernel: timeout for kernelsearch
  * new hardware module added 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 18:19:57 +0200

siduxcc (0.5.6.7) unstable; urgency=low

  * add Type=Application to siduxcc-hermes.desktop, "thanks to aka_sidux".

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 12 Aug 2007 23:19:09 +0200

siduxcc (0.5.6.6) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * remove #!/bin/bash from modules.

  [ Fabian Wuertz ]
  * siduxcc-hermes: du-detection fixed
  * siduxcc_info: changed to a normal application

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 02 Aug 2007 20:10:29 +0200

siduxcc (0.5.6.5) unstable; urgency=low

  * (build-) depend on gettext[-base].

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Jul 2007 23:50:10 +0200

siduxcc (0.5.6.4) unstable; urgency=low

  * siduxcclib added

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 25 Jul 2007 23:16:45 +0200

siduxcc (0.5.6.3) unstable; urgency=low

  * kde-menu entries added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 19 Jul 2007 11:52:29 +0200

siduxcc (0.5.6.2) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]