@@ -125,6 +125,7 @@ function install()
 	esac
 
 	echo ""
+	echo "$(eval_gettext "Process done!")"
 	echo "$(eval_gettext "Press <Enter> to continue...")"
 	read
 
