@@ -1,8 +1,13 @@
 siduxcc (0.5.6.11) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 22 Aug 2007 23:25:57 +0200
+  [ Fabian Wuertz ]
+  * NOT RELEASED YET
+  * siduxcc_kernel: kernel-remover improved
+
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 24 Aug 2007 14:11:05 +0200
 
 siduxcc (0.5.6.10) unstable; urgency=low
 
